# agent-memory

./: .gitignore  .mcp.json  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  PRIVACY.md  PRODUCT_STRATEGY.md  PUSH_SCHEDULE.md  README.md  config.yaml  pyproject.toml  requirements.txt  run_demo.py  run_local.py  setup.py
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json  post_tool_use.py  session_start.py
plugin/: mcp_server.py  plugin.json
plugin/hooks/: hooks.json  post_tool_use.py  session_start.py
skills/memory-search/: SKILL.md
src/: profiles.py
src/agents/: base.py  local_llm.py  registry.py
src/cache/: prompt_cache.py  rate_limiter.py
src/memory/: condenser.py  context_builder.py  store.py
src/metrics/: tracker.py
src/orchestrator/: router.py
tests/: test_memory.py  test_orchestrator.py
