[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory"
version = "0.1.0"
description = "Save 60-90% on LLM token costs with intelligent memory compression"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["anthropic>=0.52.0"]

[project.optional-dependencies]
vector = ["chromadb>=0.5.0"]
local = ["openai>=1.0.0"]
mcp = ["mcp>=1.0.0"]
all = ["chromadb>=0.5.0", "openai>=1.0.0", "mcp>=1.0.0"]
dev = ["pytest>=8.0", "chromadb>=0.5.0", "openai>=1.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
